--- a/app/assets/stylesheets/stylesheets/skills/index.css
+++ b/app/assets/stylesheets/stylesheets/skills/index.css
@@ -1,11 +1,144 @@
 .intro {
-    height: 100vh;
-    width: 100%;
+  height: 100vh;
+  width: 100%;
+  position: relative;
+}
+
+.intro1 {
+  z-index: 3;
+  position: absolute;
+  top: 5%;
+  right: 8%;
+  letter-spacing: 1px;
+  text-align: left;
+  color: white;
+}
+
+.intro1 h1 {
+  font-size: 140px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.intro p {
+  font-size: 50px;
+  font-weight: 600;
+}
+
+.sign-up3 {
+  padding: 5px 10px;
+  margin: 10px 0;
+  color: #333333;
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: 600;
+  color: white;
+  background-color: blueviolet;
+  border: 1px solid;
+  border-radius: 20px;
+  z-index: 5;
+  background-color: blueviolet;
+}
+
+#slide ul {
+  padding: 0;
+  position: relative;
+}
+
+#slide li {
+  list-style: none;
+  position: absolute;
+  width: 100%;
 }
 
 .cake-intro {
-    width: 100%;
-    height: 790px;
-    object-fit: cover;
-    size: cover;
+  width: 100%;
+  height: 790px;
+  object-fit: cover;
+  size: cover;
+  z-index: 1;
+}
+
+#button {
+  padding-top: 730px;
+  text-align: center;
+  margin-bottom: 80px;
+}
+
+#button ul {
+  margin-top: 100px;
+  list-style: none;
+  display: inline-block;
+}
+
+#button ul li {
+  float: left;
+  margin-right: 15px;
+}
+
+#button ul li:last-child {
+  margin-right: 0;
+}
+
+#button ul li a {
+  text-indent: -9999px;
+  text-decoration: none;
+  display: block;
+  width: 14px;
+  height: 14px;
+  border-radius: 7px;
+  background: #a8dcdb;
+}
+
+#button ul li a.target {
+  background: #41afad;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .cake-intro {
+    height: 500px;
+  }
+  .intro1 {
+    position: absolute;
+    right: 2%;
+    top: 5%;
+  }
+  .intro1 h1 {
+    font-size: 80px;
+  }
+  .intro p {
+    font-size: 30px;
+  }
+  .sign-up3 {
+    font-size: 30px;
+  }
+  #button {
+    padding-top: 430px;
+  }
+  #button {
+    padding-top: 430px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cake-intro {
+    height: 350px;
+  }
+  .intro1 {
+    position: absolute;
+    right: 2%;
+    top: 3%;
+  }
+  .intro1 h1 {
+    font-size: 50px;
+  }
+  .intro p {
+    font-size: 20px;
+  }
+  .sign-up3 {
+    font-size: 20px;
+  }
+  #button {
+    padding-top: 290px;
+  }
 }
