--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,6 +3,11 @@
     <div class="top-page-logo">
       <h1><%= link_to "CakeLog" ,root_path, class: "cakelog" %></h1>
     </div>
+    <div class="hamburger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <div class="sign-up">
       <% if user_signed_in? %>
       <%= "#{current_user.name}さんは、ログインしています。" %>
@@ -11,8 +16,8 @@
       <%= link_to "ログイン", new_user_session_path ,class: "sign-up2" %>
       <%= link_to "新規登録", new_user_registration_path ,class: "sign-up2" %>
       <% end %>
-      <div>
 
-      </div>
+
+    </div>
 
 </header>
