--- a/app/assets/stylesheets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/stylesheets/shared/header.css
@@ -1,6 +1,20 @@
+header {
+  background: #ece9e6;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ffffff, #ece9e6);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ffffff, #ece9e6);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  position: fixed;
+  z-index: 6;
+  width: 100%;
+  margin-top: -85px;
+}
+
 .top-page-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 10vh;
 }
 
@@ -16,18 +30,30 @@
   text-decoration: none;
 }
 
+.new-skill {
+  padding: 5px 10px;
+  margin: 10px 10px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 24px;
+  color: #ffffff;
+  background-color: tomato;
+  border-radius: 20px;
+}
+
 .sign-up {
-  margin-top: 15px;
+  margin-top: 5px;
   padding: 15px;
 }
 
 .sign-up2 {
   padding: 5px 10px;
-  margin: 10px 20px;
-  color: #333333;
+  margin: 10px 10px;
+  color: #ffffff;
   text-decoration: none;
   font-size: 24px;
-  border: 1px solid #333333;
+  color: #ffffff;
+  background-color: blueviolet;
   border-radius: 20px;
 }
 
@@ -113,7 +139,14 @@
     z-index: 5;
     display: block;
     color: white;
-    border: 1px solid white;
+    transition: 0.4s all;
+  }
+  .new-skill {
+    margin: 50% auto;
+    width: 50%;
+    z-index: 5;
+    display: block;
+    color: white;
     transition: 0.4s all;
   }
 }
