一覧機能ビュー、ログイン時の実装

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -12,7 +12,7 @@
     </div>
     <div class="sign-up">
       <% if user_signed_in? %>
-      <%= "#{current_user.name}さんは、ログインしています。" %>
+      <%= "#{current_user.name}" %>
       <%= link_to '投稿する', new_skill_path,method: :get, class:"new-skill"  %>
       <%= link_to "ログアウト", destroy_user_session_path ,method: :delete ,class: "sign-up2"%>
       <% else %>
