新規投稿画面のビューの実装

--- a/app/assets/stylesheets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/stylesheets/user/login.css
@@ -54,3 +54,12 @@
     background-color: blueviolet;
     border-radius: 20px;
 }
+
+@media screen and (max-width: 768px) {
+    .login1 {
+        width: 90%;
+    }
+    .field p {
+        font-size: 18px;
+    }
+}
