--- a/app/assets/stylesheets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/stylesheets/shared/header.css
@@ -53,7 +53,8 @@ header {
     text-decoration: none;
     font-size: 24px;
     color: #ffffff;
-    background-color: blueviolet;
+    background-color: #828df5;
+    opacity: 0.8;
     border-radius: 20px;
 }
 
