--- a/app/assets/stylesheets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/stylesheets/user/login.css
@@ -51,7 +51,8 @@
     text-decoration: none;
     font-size: 24px;
     color: #ffffff;
-    background-color: blueviolet;
+    background-color: #828df5;
+    opacity: 0.8;
     border-radius: 20px;
 }
 
