--- a/app/assets/stylesheets/stylesheets/skills/index.css
+++ b/app/assets/stylesheets/stylesheets/skills/index.css
@@ -318,6 +318,7 @@ hr {
         font-size: 15px;
     }
     .content {
+        height: 100%;
         margin: 50px auto 50px;
     }
     .contents {
