投稿詳細機能の実装

--- a/app/assets/stylesheets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/stylesheets/user/login.css
@@ -59,6 +59,7 @@
 @media screen and (max-width: 768px) {
     .login1 {
         width: 90%;
+        height: 100%;
     }
     .field p {
         font-size: 18px;
