--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -32,7 +32,7 @@
         <p>
           美味しいお菓子を作りたい。もっと新しい技術を学びたい。身につけた技術を定着させたい。そんなことを、あなたは考えていませんか？興味のあるお菓子作りの技術を閲覧や投稿することで、自分自身をもっと磨いていけると信じています。さあ，いっしょに関わる人を自分のケーキで幸せにしていきましょう。
         </p>
-        <p class="mt-4">CakeLog　辻明弘</p>
+        <p class="mt-4">CakeLog 辻明弘</p>
       </div>
       <div class="col-md-6">
         <%= image_tag("philosophy-image.jpg", class:"philosophy-image") %>
@@ -43,6 +43,7 @@
 <hr>
 <section class="content">
   <div class="container">
+
     <p class="content-p">投稿例</p>
     <div class="row">
       <div class="col-md-6">
@@ -85,9 +86,11 @@
             </div>
             <span class="skill-name1"><%= skill.name %></span>
           </div>
+          <%= link_to skill_path(skill.id), method: :get do %>
           <div class="skill-image">
             <%= image_tag(skill.image,class: "skill-image") if skill.image.attached?%>
           </div>
+          <% end %>
         </div>
       </div>
     </div>
