--- a/app/assets/stylesheets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/stylesheets/shared/header.css
@@ -8,7 +8,7 @@ header {
     position: fixed;
     z-index: 6;
     width: 100%;
-    margin-top: -85px;
+    margin-top: -70px;
 }
 
 .top-page-header {
@@ -61,6 +61,7 @@ header {
 }
 
 @media screen and (max-width: 768px) {
+    /* ハンバーガーメニュー */
     .hamburger {
         display: block;
         color: #fff;
@@ -152,4 +153,5 @@ header {
         color: white;
         transition: 0.4s all;
     }
+    /* ハンバーガーメニュー */
 }
