--- a/app/assets/stylesheets/stylesheets/skills/index.css
+++ b/app/assets/stylesheets/stylesheets/skills/index.css
@@ -4,11 +4,14 @@ hr {
     margin: 0 auto;
 }
 
+
+/* 表紙 */
+
 .intro {
     height: 100vh;
     width: 100%;
     position: relative;
-    margin-top: 80px;
+    /* margin-top: 80px; */
 }
 
 .intro1 {
@@ -117,6 +120,9 @@ hr {
     background: #41afad;
 }
 
+
+/* 理念 */
+
 .philosophy {
     height: 80vh;
     letter-spacing: 1px;
@@ -139,6 +145,9 @@ hr {
     width: 100%;
     border-radius: 50px;
 }
+
+
+/* サンプルコンテンツ */
 
 .content {
     height: 80vh;
