--- a/app/assets/stylesheets/stylesheets/skills/new.css
+++ b/app/assets/stylesheets/stylesheets/skills/new.css
@@ -1,3 +1,5 @@
+/* 投稿入力画面 */
+
 .skill-box {
     margin-top: 85px;
     text-align: center;
@@ -85,3 +87,6 @@ textarea {
     opacity: 0.8;
     border-radius: 20px;
 }
+
+
+/* 投稿入力画面 */
