--- a/app/assets/stylesheets/stylesheets/skills/index.css
+++ b/app/assets/stylesheets/stylesheets/skills/index.css
@@ -11,7 +11,7 @@ hr {
     height: 100vh;
     width: 100%;
     position: relative;
-    /* margin-top: 80px; */
+    margin-top: 80px;
 }
 
 .intro1 {
@@ -66,7 +66,7 @@ hr {
     object-fit: cover;
     size: cover;
     z-index: 1;
-    -webkit-animation: cake-intro 5s ease-out 2 both;
+    /* -webkit-animation: cake-intro 5s ease-out 2 both; */
 }
 
 
@@ -214,7 +214,7 @@ hr {
 .skill-image {
     text-align: center;
     width: 80%;
-    height: 500px;
+    height: 70%;
     object-fit: cover;
     margin: 0 auto;
     border-radius: 50px;
