--- a/app/assets/stylesheets/stylesheets/skills/show.css
+++ b/app/assets/stylesheets/stylesheets/skills/show.css
@@ -6,7 +6,7 @@
 
 .skill-show-box {
     padding: 40px;
-    margin: 60px auto;
+    margin: 80px auto;
     width: 80%;
     height: 100%;
     background-color: #ffffff;
@@ -51,8 +51,8 @@
 }
 
 .skill-show-image {
-    width: 100%;
-    height: 90%;
+    width: 95%;
+    height: 70%;
     object-fit: cover;
     position: center;
     border-radius: 20px;
@@ -66,4 +66,54 @@
 .skill-show-recipe-text {
     white-space: pre-wrap;
     font-size: 18px;
+}
+
+.comment-box {
+    padding: 40px;
+    margin: 80px auto;
+    width: 80%;
+    height: 100%;
+    background-color: #ffffff;
+    border-radius: 20px;
+}
+
+.comment-image {
+    width: 100%;
+    height: 25vw;
+}
+
+.comment-image-box {
+    width: 100%;
+    position: relative;
+    z-index: 1;
+}
+
+.comment-image-box p {
+    width: 100%;
+    position: absolute;
+    top: 30%;
+    left: -2%;
+    font-size: 2.3vw;
+    font-weight: 700;
+    letter-spacing: 1px;
+    z-index: 2;
+    color: #ffffff;
+    white-space: pre-wrap;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .comment-image {
+        height: 25vw;
+    }
+    .comment-image-box p {
+        font-size: 2.3vw;
+        position: absolute;
+        left: -6%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .comment-image-box {
+        display: none;
+    }
 }
