--- a/app/assets/stylesheets/stylesheets/skills/show.css
+++ b/app/assets/stylesheets/stylesheets/skills/show.css
@@ -77,6 +77,64 @@
     border-radius: 20px;
 }
 
+.comment-box p {
+    font-size: 24px;
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+#comment-box1 {
+    margin: 0 30px;
+}
+
+.comment-out {
+    margin-top: 40px;
+    width: 100%;
+    /* background-image: url("../images/comment-image2.jpg"); */
+}
+
+#comment-index {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.comment-delete {
+    padding: 2px 5px;
+    margin: 10px 10px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 12px;
+    color: #ffffff;
+    background-color: #828df5;
+    opacity: 0.8;
+    border-radius: 20px;
+}
+
+.comment-name {
+    font-size: 18px;
+}
+
+.comment-out p {
+    font-size: 20px;
+}
+
+.comment-textarea {
+    height: 80%;
+    width: 50%;
+}
+
+.comment-btn {
+    padding: 3px 8px;
+    margin: 10px 10px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #828df5;
+    opacity: 0.8;
+    border-radius: 20px;
+}
+
 .comment-image {
     width: 100%;
     height: 25vw;
