--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -60,31 +60,35 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-12">
-          <p>コメント一覧</p>
-          <div class="comment-out">
-            <% @comments.each do |comment| %>
-            <div class="comment-name">
-              <%= comment.user.name %>
-              <%= link_to "削除",skill_comment_path(comment.skill.id,comment.id),method: :delete, class: "comment-delete" %>
+          <div id="comment-box1">
+            <div class="comment-out">
+              <p id="comment-index">コメント一覧</p>
+              <% @comments.each do |comment| %>
+              <div class="comment-name">
+                <%= comment.user.name %>
+                <% if current_user.id == comment.user.id%>
+                <%= link_to "削除",skill_comment_path(comment.skill.id,comment.id),method: :delete, class: "comment-delete" %>
+                <% end %>
+              </div>
+              <p>
+                <%= comment.text %>
+              </p>
+              <% end %>
             </div>
-            <p>
-              <%= comment.text %>
-            </p>
-            <% end %>
-          </div>
 
-          <div class="comment-in">
-            <%= form_with(model: [@skill, @comment], local: true) do |form| %>
-            <%= form.text_area :text, placeholder: "コメントする" ,rows: "2"%>
-            <div>
-              <%= form.submit "コメントする" %>
+            <div class="comment-in">
+              <%= form_with(model: [@skill, @comment], local: true) do |form| %>
+              <%= form.text_area :text, placeholder: "コメントする" ,rows: "2", class:"comment-textarea"%>
+              <div>
+                <%= form.submit "コメントする", class:"comment-btn"%>
+              </div>
+              <% end %>
             </div>
-            <% end %>
           </div>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="comment-image-box">
-            <%= image_tag("comment.jpg", class:"comment-image")  %>
+            <%= image_tag("comment-image1.jpg", class:"comment-image")  %>
             <p>
               良かったところを
               コメントしてみよう!
