マイページ機能実装

--- a/app/assets/stylesheets/stylesheets/skills/new.css
+++ b/app/assets/stylesheets/stylesheets/skills/new.css
@@ -74,6 +74,11 @@ textarea {
     font-size: 24px;
     background-color: tomato;
     border-radius: 20px;
+    hover
+}
+
+.btn:hover {
+    color: #828df5;
 }
 
 .back-btn {
