--- a/app/assets/stylesheets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/stylesheets/shared/header.css
@@ -60,6 +60,13 @@ header {
     border-radius: 20px;
 }
 
+.user-page {
+    padding: 5px;
+    font-size: 20px;
+    color: #333333;
+    text-decoration: none;
+}
+
 @media screen and (max-width: 768px) {
     /* ハンバーガーメニュー */
     .hamburger {
