--- a/app/assets/stylesheets/stylesheets/skills/index.css
+++ b/app/assets/stylesheets/stylesheets/skills/index.css
@@ -189,6 +189,9 @@ hr {
     padding-left: 50px;
 }
 
+
+/* ログイン者の一覧 */
+
 .skills {
     margin-top: 80px;
 }
@@ -199,7 +202,7 @@ hr {
 
 .skill-name {
     font-size: 40px;
-    margin: 0 18%;
+    margin: 0 25%;
 }
 
 .skill-name1 {
@@ -208,13 +211,14 @@ hr {
 
 .contributor {
     margin-right: 20px;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .skill-image {
     text-align: center;
-    width: 80%;
-    height: 70%;
+    width: 100%;
+    max-width: 660px;
+    height: 400px;
     object-fit: cover;
     margin: 0 auto;
     border-radius: 50px;
