--- a/app/assets/stylesheets/stylesheets/skills/new.css
+++ b/app/assets/stylesheets/stylesheets/skills/new.css
@@ -96,7 +96,11 @@ textarea {
 /* 投稿入力画面 */
 
 @media screen and (max-width: 768px) {
+    .skill-box {
+        width: 100%;
+    }
     .skill-box2 {
-        width: 80%;
+        width: 70%;
+        height: 90%;
     }
 }
