--- a/app/assets/stylesheets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/stylesheets/user/login.css
@@ -10,15 +10,16 @@
 .login {
     text-align: center;
     margin-top: 50px;
-    height: 77vh;
+    height: 120%;
+    min-height: 77vh;
 }
 
 .login1 {
-    margin: 0 auto;
+    margin: 30px auto;
     padding: 80px;
     width: 60%;
     background-color: #ffffff;
-    height: 70vh;
+    height: 90%;
 }
 
 .login2 {
