チャットルームのビューを調整

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
               <p><%= @user.name %>さんの投稿一覧</p>
             </div>
             <% if current_user != @user %>
-            <%= link_to 'chatを始める', message_path(@user.id)%>
+            <%= link_to 'メッセージを送る', message_path(@user.id)%>
             <% end %>
             <div class="user-contents">
               <% @skills.each do |skill|  %>
