--- a/app/assets/stylesheets/stylesheets/skills/new.css
+++ b/app/assets/stylesheets/stylesheets/skills/new.css
@@ -5,6 +5,8 @@
     text-align: center;
     /* margin: 0 auto; */
     height: 140vh;
+    width: 100%;
+    height: 100%;
 }
 
 .skill-box2 {
@@ -101,5 +103,17 @@ textarea {
     .skill-box2 {
         width: 70%;
         height: 90%;
+    }
+    #skill-image {
+        width: 80%;
+    }
+    .btn2 {
+        margin-left: 0;
+        width: 30%;
+        font-size: 15px;
+    }
+    .back-btn {
+        width: 30%;
+        font-size: 15px;
     }
 }
