--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <h1>ユーザー一覧</h1>
 
 <% @users.each do |user| %>
@@ -7,3 +8,4 @@
   <% end %>
 </div>
 <% end %>
+<%= render "shared/footer" %>
