--- a/app/assets/stylesheets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/stylesheets/shared/header.css
@@ -60,6 +60,18 @@ header {
     border-radius: 20px;
 }
 
+.user-index {
+    padding: 5px 10px;
+    margin: 10px 10px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 24px;
+    color: #ffffff;
+    background-color: #828df5;
+    opacity: 0.8;
+    border-radius: 20px;
+}
+
 .user-page {
     padding: 5px;
     font-size: 20px;
@@ -145,7 +157,7 @@ header {
         z-index: 4;
     }
     .sign-up2 {
-        margin: 40% auto;
+        margin: 35% auto;
         width: 50%;
         z-index: 5;
         display: block;
@@ -153,7 +165,15 @@ header {
         transition: 0.4s all;
     }
     .new-skill {
-        margin: 40% auto;
+        margin: 35% auto;
+        width: 50%;
+        z-index: 5;
+        display: block;
+        color: white;
+        transition: 0.4s all;
+    }
+    .user-index {
+        margin: 35% auto;
         width: 50%;
         z-index: 5;
         display: block;
