--- a/app/assets/stylesheets/stylesheets/skills/show.css
+++ b/app/assets/stylesheets/stylesheets/skills/show.css
@@ -70,7 +70,7 @@
 
 .comment-box {
     padding: 40px;
-    margin: 80px auto;
+    margin: 80px auto 40px;
     width: 80%;
     height: 100%;
     background-color: #ffffff;
@@ -160,22 +160,42 @@
     white-space: pre-wrap;
 }
 
+.chat-room {
+    padding: 5px 10px;
+    margin: 10px 80px 0 120px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 24px;
+    color: #ffffff;
+    background-color: #828df5;
+    opacity: 0.8;
+    border-radius: 20px;
+}
+
+.chat-btn {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+
+}
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     .comment-image {
         height: 25vw;
     }
+    
     .comment-image-box p {
         font-size: 2.3vw;
         position: absolute;
         left: -6%;
     }
 }
-
 @media screen and (max-width: 768px) {
     #comment-index {
         margin-bottom: 30px;
         font-size: 20px;
     }
+    
     .comment-image-box {
         display: none;
     }
