--- a/app/assets/stylesheets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/stylesheets/user/show.css
@@ -13,6 +13,25 @@
 .user-show3 {
     text-align: left;
     margin: 0 25%;
+    position: relative;
+}
+
+.chat-room2 {
+    padding: 5px 10px;
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #828df5;
+    opacity: 0.8;
+    border-radius: 18px;
+}
+
+.user-chat-room {
+    position: absolute;
+    width: 100%;
+    top: -10%;
+    left: 70%;
 }
 
 .user-show4 {
