--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,12 @@
           <div class="user-show2">
             <div class="user-show3">
 
-              <p><%= @user.name %>さんの投稿一覧</p>
+              <p><span><%= @user.name %>さんの投稿一覧</span>
+                <% if current_user != @user %>
+                <span class="user-chat-room"><%= link_to 'メッセージを送る', message_path(@user.id),class:"chat-room2"%></span>
+                <% end %>
+              </p>
             </div>
-            <% if current_user != @user %>
-            <%= link_to 'メッセージを送る', message_path(@user.id)%>
-            <% end %>
             <div class="user-contents">
               <% @skills.each do |skill|  %>
               <div class="user-show4">
