--- a/app/assets/stylesheets/stylesheets/messages/show.css
+++ b/app/assets/stylesheets/stylesheets/messages/show.css
@@ -7,7 +7,7 @@
 
 .message1 {
     /* height: 100%; */
-    width: calc(100% - 40%);
+    width: calc(100% - 60%);
     margin: 0 auto;
     background-color: #fff;
     z-index: 3;
@@ -87,7 +87,7 @@
 }
 
 #message_content {
-    width: 65%;
+    width: 45%;
     margin-left: 50px;
     padding: 10px;
 }
@@ -97,4 +97,22 @@
     color: #000;
     padding: 10px;
     border-radius: 50px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .message1 {
+        width: calc(100% - 40%);
+    }
+    #message_content {
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .message1 {
+        width: calc(100% - 40%);
+    }
+    #message_content {
+        width: 65%;
+    }
 }
