--- a/app/assets/stylesheets/stylesheets/user/show.css
+++ b/app/assets/stylesheets/stylesheets/user/show.css
@@ -13,11 +13,11 @@
 .user-show3 {
     text-align: left;
     margin: 0 25%;
-    position: relative;
 }
 
 .chat-room2 {
     padding: 5px 10px;
+    margin-bottom: 40px;
     color: #ffffff;
     text-decoration: none;
     font-size: 16px;
@@ -28,10 +28,7 @@
 }
 
 .user-chat-room {
-    position: absolute;
     width: 100%;
-    top: -10%;
-    left: 70%;
 }
 
 .user-show4 {
@@ -41,7 +38,11 @@
 
 .user-show1 p {
     font-size: 50px;
-    margin: 40px auto 40px;
+    margin: 40px auto 15px;
+}
+
+.user-contents {
+    margin-top: 40px;
 }
 
 .user-show-name1 {
