--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,10 +8,12 @@
             <div class="user-show3">
 
               <p><span><%= @user.name %>さんの投稿一覧</span>
-                <% if current_user != @user %>
-                <span class="user-chat-room"><%= link_to 'メッセージを送る', message_path(@user.id),class:"chat-room2"%></span>
-                <% end %>
               </p>
+              <% if current_user != @user %>
+              <div>
+                <span class="user-chat-room"><%= link_to 'メッセージを送る', message_path(@user.id),class:"chat-room2"%></span>
+              </div>
+              <% end %>
             </div>
             <div class="user-contents">
               <% @skills.each do |skill|  %>
