--- a/app/assets/stylesheets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/stylesheets/shared/header.css
@@ -25,7 +25,7 @@ header {
 
 .cakelog {
     position: absolute;
-    top: 31%;
+    top: 8%;
     font-size: 36px;
     font-weight: 600;
     color: #333333;
@@ -41,6 +41,12 @@ header {
     color: #ffffff;
     background-color: tomato;
     border-radius: 20px;
+}
+
+.new-skill:hover {
+    transform: translateX(-2.5px, -2.5px);
+    color: white;
+    box-shadow: 5px 5px 0 0 #000;
 }
 
 .sign-up {
