--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header>
   <div class="top-page-header">
     <div class="top-page-logo">
-      <h1><%= link_to "CakeLog" ,root_path, class: "cakelog" %></h1>
+      <h1><%= link_to image_tag("CakeLog_logo.png", class: "cakelog"),root_path %></h1>
     </div>
     <div class="hamburger">
       <span></span>
