--- a/app/assets/stylesheets/stylesheets/skills/index.css
+++ b/app/assets/stylesheets/stylesheets/skills/index.css
@@ -36,6 +36,7 @@ hr {
 }
 
 .sign-up3 {
+    display: inline-block;
     padding: 5px 15px;
     margin: 10px 0;
     color: #333333;
@@ -47,6 +48,13 @@ hr {
     opacity: 0.8;
     border-radius: 20px;
     z-index: 5;
+    transition: all 0.3s;
+}
+
+.sign-up3:hover {
+    transform: translate(-2.5px, -2.5px);
+    color: white;
+    box-shadow: 5px 5px 0 0 #000;
 }
 
 #slide ul {
