--- a/app/assets/stylesheets/stylesheets/skills/new.css
+++ b/app/assets/stylesheets/stylesheets/skills/new.css
@@ -17,7 +17,7 @@
 }
 
 .post {
-    padding-top: 30px;
+    padding-top: 40px;
     margin-bottom: 40px;
 }
 
@@ -70,19 +70,25 @@ textarea {
 }
 
 .btn2 {
+    display: inline-block;
     padding: 5px 10px;
     margin: 10px 10px;
     color: #ffffff;
     font-size: 24px;
     background-color: tomato;
+    border: solid 1px tomato;
     border-radius: 20px;
+    transition: all 0.3s;
 }
 
-.btn:hover {
-    color: #828df5;
+.btn2:hover {
+    transform: translate(-2.5px, -2.5px);
+    color: white;
+    box-shadow: 5px 5px 0 0 #000;
 }
 
 .back-btn {
+    display: inline-block;
     padding: 5px 10px;
     margin: 10px 10px;
     color: #ffffff;
@@ -91,6 +97,13 @@ textarea {
     background-color: #828df5;
     opacity: 0.8;
     border-radius: 20px;
+    transition: all 0.3s;
+}
+
+.back-btn:hover {
+    transform: translate(-2.5px, -2.5px);
+    color: white;
+    box-shadow: 5px 5px 0 0 #000;
 }
 
 
