--- a/app/assets/stylesheets/stylesheets/user/login.css
+++ b/app/assets/stylesheets/stylesheets/user/login.css
@@ -46,6 +46,7 @@
 }
 
 .btn {
+    display: inline-block;
     padding: 5px 10px;
     margin: 10px 10px;
     color: #ffffff;
@@ -55,6 +56,13 @@
     background-color: #828df5;
     opacity: 0.8;
     border-radius: 20px;
+    transition: all 0.3s;
+}
+
+.btn:hover {
+    transform: translate(-2.5px, -2.5px);
+    color: white;
+    box-shadow: 5px 5px 0 0 #000;
 }
 
 @media screen and (max-width: 768px) {
